package Guardarropa;

public enum EstadoSugerencia {
  ACEPTADA,
  RECHAZADA,
  TENTATIVA
}
