package Guardarropa;

public enum TipoSugerencia {
  AGREGAR,
  QUITAR
}
