package Prenda;

public class ColorRgb {
  private Integer rojo;
  private Integer verde;
  private Integer azul;

  public ColorRgb(Integer rojo, Integer verde, Integer azul) {
    this.rojo = rojo;
    this.verde = verde;
    this.azul = azul;
  }

  public Integer getRojo() {
    return rojo;
  }

  public Integer getVerde() {
    return verde;
  }

  public Integer getAzul() {
    return azul;
  }
}
