package Prenda;

public enum Material {
  TELA,
  PLASTICO,
  ACETATO,
  CUERO,
  ALGODON,
  PIQUE
}
