package Prenda;

public enum Trama {
  LISA,
  ESTAMPA,
  RAYADA,
  LUNARES,
  CUADROS
}
