package Utilidades;

public interface ServicioDeClima {
  Integer getProbabilidadDePrecipitaciones();

  Integer getTemperaturaEnCelsius();
}
